[gd_scene load_steps=56 format=2]

[ext_resource path="res://Characters/Cooper.gd" type="Script" id=1]
[ext_resource path="res://Sounds/quick_swing.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/long_swing.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/Cooper/HIGH_BLOCK1.png" type="Texture" id=4]
[ext_resource path="res://Sounds/hit.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/hit_end.wav" type="AudioStream" id=7]
[ext_resource path="res://Sprites/Cooper/POWER_PUNCH1.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Cooper/LOW_BLOCK1.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Cooper/HIGH_HIT1.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Cooper/KNOCKDOWN1.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Cooper/KNOCKDOWN2.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Cooper/KNOCKDOWN3.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Cooper/KNOCKDOWN4.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Cooper/KNOCKDOWN5.png" type="Texture" id=20]
[ext_resource path="res://Sounds/close_001.ogg" type="AudioStream" id=22]
[ext_resource path="res://Sprites/Cooper/HIGH_HIT2.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Cooper/LOW_HIT1.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Cooper/IDLE2.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Cooper/IDLE1.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Cooper/IDLE3.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Cooper/IDLE4.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Cooper/IDLE5.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Cooper/IDLE6.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Cooper/IDLE7.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Cooper/IDLE8.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Cooper/POWER_PUNCH2.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Cooper/POWER_PUNCH3.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Cooper/POWER_PUNCH4.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Cooper/POWER_PUNCH5.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Cooper/IDLE_HIGH9.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Cooper/IDLE_HIGH8.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Cooper/IDLE_HIGH7.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Cooper/punch1.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Cooper/punch2.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Cooper/punch3.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Cooper/punch4.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Cooper/STUN1.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Cooper/STUN2.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Cooper/STUN3.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Cooper/STUN4.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Cooper/STUN5.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Cooper/STUN6.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Cooper/STUN7.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Cooper/STUN8.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Cooper/IDLE_HIGH6.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Cooper/IDLE_HIGH5.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Cooper/IDLE_HIGH4.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Cooper/IDLE_HIGH3.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Cooper/IDLE_HIGH1.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Cooper/IDLE_HIGH2.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Cooper/WALK2.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Cooper/WALK1.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Cooper/WALK3.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Cooper/WALK4.png" type="Texture" id=61]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ) ],
"loop": true,
"name": "Stun",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Knockdown",
"speed": 12.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "Block High",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": false,
"name": "Punch",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": true,
"name": "Power Punch",
"speed": 12.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 58 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 23 ) ],
"loop": false,
"name": "Hit High",
"speed": 1.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "Get Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "Hit Low",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Block Low",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "Idle Low",
"speed": 12.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 57 ), ExtResource( 55 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 52 ), ExtResource( 39 ), ExtResource( 38 ), ExtResource( 37 ) ],
"loop": true,
"name": "Idle High",
"speed": 5.0
} ]

[node name="Cooper" type="Node2D"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 1 )
animation = "Block High"
script = ExtResource( 1 )

[node name="QuickSwing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
pitch_scale = 1.5

[node name="Block" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -3.979
pitch_scale = 1.17

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="LongSwing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 1.25

[node name="LongTaunt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 2.25

[node name="QuickTaunt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 2.5

[node name="HitEnd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0
